# ChangeLog for sys-apps/portage
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Id$

*portage-2.2.01.19893 (10 Dec 2011)

  10 Dec 2011; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.19893.ebuild,
  -portage-2.2.01.19833.ebuild:
  Bump, replace previous faulty snapshot, ebuilds could cause out-of-prefix
  installations with funcs like doman.

*portage-2.2.01.19833 (08 Dec 2011)

  08 Dec 2011; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.19833.ebuild:
  Version bump, matches portage-2.2.0_alpha79+

*portage-2.2.01.19572 (21 Oct 2011)

  21 Oct 2011; Fabian Groffen <grobian@gentoo.org> +portage-2.2.01.19572.ebuild,
  -portage-2.2.01.19247.ebuild:
  Version bump, matches portage-2.2.0_alpha70

*portage-2.2.01.19478 (15 Oct 2011)

  15 Oct 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.19120.ebuild, +portage-2.2.01.19478.ebuild:
  Version bump, matches portage-2.2.0_alpha67

*portage-2.2.01.19295 (20 Sep 2011)

  20 Sep 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.19074.ebuild, +portage-2.2.01.19295.ebuild:
  Version bump, matches portage-2.2.0_alpha59+, fixes preserve-libs on AIX and
  Darwin, bug #383691

  16 Sep 2011; Michael Haubenwallner <haubi@gentoo.org>
  portage-2.2.01.19247.ebuild,
  +files/portage-2.2.01.19247-aix-preserve-libs.patch,
  +files/portage-2.2.01.19247-ebuildshell.patch:
  Fix preserve-libs for AIX. Fix ebuildshell patch for portage-2.2.01.19247.

*portage-2.2.01.19247 (14 Sep 2011)

  14 Sep 2011; Fabian Groffen <grobian@gentoo.org>
  +portage-2.2.01.19247.ebuild:
  Version bump, portage-2.2.0_alpha56+ including repoman fixes for repodirs

*portage-2.2.01.19235 (13 Sep 2011)

  13 Sep 2011; Fabian Groffen <grobian@gentoo.org>
  -portage-2.2.01.19234.ebuild, +portage-2.2.01.19235.ebuild:
  Replace faulty snapshot that had a broken enough repoman to die on committing
  the Manifest

*portage-2.2.01.19234 (13 Sep 2011)

  13 Sep 2011; Fabian Groffen <grobian@gentoo.org>